createTask and deleteTask is implemented with backend

--- a/web/src/app/components/add-tasks/add-tasks.component.html
+++ b/web/src/app/components/add-tasks/add-tasks.component.html
@@ -52,12 +52,7 @@
 
       <div class="task-status">
         <label for="taskStatus">Task Status:</label>
-        <select
-          name="taskStatus"
-          id="taskStatus"
-          value="Not Started"
-          formControlName="taskStatus"
-        >
+        <select name="taskStatus" id="taskStatus" formControlName="taskStatus">
           <option value="Not Started">Not Started</option>
           <option value="In Progress">In Progress</option>
           <option value="Completed">Completed</option>
